@@ -50,6 +50,7 @@
 <%@ page contentType="text/html;charset=UTF-8" %>
 
 <%@ page import="org.dspace.app.util.SubmissionInfo" %>
+<%@ page import="org.dspace.core.ConfigurationManager" %>
 
 <%@ taglib uri="http://www.dspace.org/dspace-tags.tld" prefix="dspace" %>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/fmt" prefix="fmt" %>
@@ -64,6 +65,16 @@
     String ssURL = baseURL + "/submit/creative-commons.css";
     // Use the submit process' cc-license component
     String exitURL = baseURL + "/submit/cc-license.jsp?license_url=[license_url]";
+
+    String jurisdiction = ConfigurationManager.getProperty("webui.submit.cc-jurisdiction");
+    if ((jurisdiction != null) && (!"".equals(jurisdiction)))
+    {
+        jurisdiction = "&amp;jurisdiction=" + jurisdiction.trim();
+    }
+    else
+    {
+        jurisdiction = "";
+    }
 %>
 
 <dspace:layout navbar="admin"
@@ -76,7 +87,7 @@
    <td>
     <h1><fmt:message key="jsp.tools.creative-commons-edit.heading1"/></h1>
     <form name="ccform" id="license_form" action="" method="get">
-	<iframe src="http://creativecommons.org/license/?partner=dspace&amp;stylesheet=<%= java.net.URLEncoder.encode(ssURL) %>&amp;exit_url=<%= java.net.URLEncoder.encode(exitURL) %>" width="100%" height="540">Your browser must support IFrames to use this feature
+	<iframe src="http://creativecommons.org/license/?partner=dspace&amp;stylesheet=<%= java.net.URLEncoder.encode(ssURL) %>&amp;exit_url=<%= java.net.URLEncoder.encode(exitURL) %><%= jurisdiction %>" width="100%" height="540">Your browser must support IFrames to use this feature
 	</iframe>
 
         <input type="hidden" name="item_id" value='<%=request.getParameter("item_id")%>' />
