@@ -759,8 +759,13 @@ webui.submit.blocktheses = false
 #webui.submit.upload.required = true
 
 #### Creative Commons settings ######
-# are Creative Commons licenses used in submission?
+# Are Creative Commons licenses used in submission?
 webui.submit.enable-cc = false
+
+# Should a jurisdiction be used? If so, which one?
+# See http://creativecommons.org/international/ for a list of possible codes
+# (e.g. nz = New Zealand, uk = England and Wales, jp = Japan)
+#webui.submit.cc-jurisdiction = nz
 
 
 ##### Settings for Thumbnail creation #####
