@@ -52,6 +52,9 @@
 (OhioLINK)
  - [DS-225] dc.description.provenance - public display
 
+(Yin Yin Latt / Stuart Lewis)
+ - [DS-205] Creative Commons - option to set legal jurisdiction
+
 1.5.2 final
 ===========
 
